moved pcd-assignment-2 to github

--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,8 @@
-\documentclass{article}
+\documentclass{report}
 % Import all the packages
 \input{imports}
 % Setup the layout of the document
 \input{layangelo-latex/layout}
-\addbibresource{document/bibliography.bib}
 
 \begin{document}
 
@@ -19,9 +18,5 @@
 \newpage
 
 \input{document/content}
-
-\newpage
-
-\printbibliography
 
 \end{document}
