--- a/document/content.tex
+++ b/document/content.tex
@@ -1,3 +1,3 @@
-\section{Section}
-This is a bibliography citation to the Vocabolangelo ~\cite{vocabolangelo}.
-\centeredImage{img/parrot.jpg}{A Parrot}{0.3}
+\input{parts/part-1/part-1}
+\input{parts/part-2/part-2}
+\input{parts/part-3/part-3}
